# chanda

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
chanda/: __init__.py  analyzer.py  cli.py  constants.py  core.py  display.py  exceptions.py  formatter.py  processor.py  types.py  utils.py
chanda/data/: chanda_ardhasama.csv  chanda_jaati.csv  chanda_matra.csv  chanda_sama.csv  chanda_vishama.csv  examples.json
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
docs/api/: chanda.rst  cli.rst  core.rst  exceptions.rst  utils.rst
examples/: advanced_usage.py  basic_usage.py  verse_analysis.py
tests/: README.md  test_aksharagana_vrtta.py  test_api_objects.py  test_matra_vrtta.py
todo/: TODO.md
